# petr-test-api

./: Makefile  README.md  pyproject.toml
tests/: conftest.py  pytest.ini  settings.py
tests/reqres_api/: _test_auth.py  _test_colors.py  _test_connection.py  general_tests.py  test_auth.py  test_colors.py  test_connection.py  test_users.py  utils.py
tests/reqres_api/colors/: data.py  test_regression.py  test_smoke.py
tests/reqres_api/users/: data.py  test_regression.py  test_smoke.py
